# 3d-interactive-system

./: README.md
TestProgram/: 18105.pcd  DBSCAN_guitar.pcd  DBSCAN_result_chair.pcd  DBSCAN_result_chair2.pcd  DBSCAN_result_guitar.pcd  Graphcut_guitar_withbackground_1.pcd  Graphcut_guitar_withbackground_2.pcd  Kmeans_guitar.pcd  chair2_groundtruth.pcd  chair_groundtruth.pcd  container_groundtruth.pcd  guitar_groundtruth.pcd  segment compare.xlsx
data/: Note for those data.txt  Pillows_bin.pcd  Planes.pcd  Planes_bin.pcd  bag_gt.pcd  object_bag.pcd  object_chair.pcd  object_guitar_normalized.pcd  object_organ_normalized.pcd  pcm-house-rescaled_2.pcd
data/Compare clouds/: DBSCAN_bucket.pcd  Pillow_ground_truth.pcd  Table_in_conner_gt.pcd  container_kmeans.pcd  containers_graphcutresult.pcd  segmented_box_with_background_1.pcd  segmented_box_with_background_2.pcd  segmented_box_without_background.pcd  segmented_guitar_without_background.pcd  segmented_pillow_with_background_1.pcd  segmented_pillow_with_background_2.pcd  segmented_pillow_without_background.pcd  segmented_table_with_background_2.pcd  segmented_table_without_background.pcd  table_box_ground_truth.pcd
src/: CMakeLists.txt  ClusteringBasedSegmentation.cpp  ClusteringBasedSegmentation.h  GraphBasedSegmentation.cpp  GraphBasedSegmentation.h  MainProgram.cpp  MainProgram.h  MyMinCut.cpp  MyMinCut.h  ObjectInsertion.cpp  ObjectInsertion.h  ObjectRemoval.cpp  ObjectRemoval.h  PlaneSegmentation.cpp  PlaneSegmentation.h  SupportingFunctions.cpp  SupportingFunctions.h  Triangulation.cpp  Triangulation.h  main.cpp
(+3 files in other folders)
